# battleships

./: CMakeLists.txt  README.md  client.c  common.c  common.h  grid.c  grid.h  server.py  shared_plr.py  ship.c  ship.h  ui.txt
python-cli/: client.py  shared_plr.py  ui.txt
